# CircuitFlow

./: .env.example  .gitignore  ARCHITECTURE.md  PROGRESS.md  README.md  important.md  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
examples/: ne555_astable.kicad_sch  simple_led.kicad_sch
src/kcad_auto_pcb/: __init__.py
src/kcad_auto_pcb/agent/: __init__.py  agent.py  domain_knowledge.py  tools.py
src/kcad_auto_pcb/cli/: display.py  main.py
src/kcad_auto_pcb/config/: settings.py
src/kcad_auto_pcb/data/: __init__.py  providers.py  reference.py  sources.py
src/kcad_auto_pcb/engines/: freerouting_mgr.py  kicad_bridge.py  kicad_native.py
src/kcad_auto_pcb/footprint/: cache.py  generator.py  parser.py  resolver.py
src/kcad_auto_pcb/geometry/: grid.py  point.py  rect.py  transform.py
src/kcad_auto_pcb/knowledge/: pcb_rules.yaml
src/kcad_auto_pcb/llm/: __init__.py  base.py  cache.py  prompt_templates.py  response_parser.py  token_counter.py
src/kcad_auto_pcb/pcb/: __init__.py  board_builder.py  exporter.py  stackup.py
src/kcad_auto_pcb/pipeline/: context.py  orchestrator.py  step.py
src/kcad_auto_pcb/placement/: __init__.py  cost_function.py  force_directed.py  legalizer.py  llm_optimizer.py
src/kcad_auto_pcb/routing/: __init__.py  astar.py  llm_router.py  multi_layer.py  ordering.py  ripup_retry.py  via_placer.py
tests/: conftest.py  test_footprint.py  test_footprint_generator.py  test_geometry.py  test_llm.py  test_multimodal_reader.py  test_pipeline.py  test_placement.py  test_routing.py  test_schematic_parser.py
(+22 files in other folders)
